samples/_failures_safe/1761667721_76c017_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_beba7ce7.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_beba7ce7.c:186: error: expected ‘{’ at end of input
